--- a/mediamosa_tinymce/templates/mediamosa_tinymce/tinymce_asset_dialog.html
+++ b/mediamosa_tinymce/templates/mediamosa_tinymce/tinymce_asset_dialog.html
@@ -1,5 +1,7 @@
 {% extends "admin/base_site.html" %}
 {% load i18n %}
+{% load url from future %}
+
 
 {% block branding %}
 <h1 id="site-name">{% trans 'MediaMosa' %}</h1>
@@ -8,7 +10,6 @@
 {% block extrahead %}
     <script src="{{ STATIC_URL }}js/jquery-1.8.3.min.js"></script>
     <script type="text/javascript" src="{{ STATIC_URL }}tiny_mce/tiny_mce_popup.js"></script>
-    <script src="{{ STATIC_URL }}tiny_mce/plugins/mediamosa/mediamosa-dialog.js"></script>
     <script type="text/javascript">
         $(document).ready(function() {
             $(':button').click(function(event) {
@@ -18,14 +19,17 @@
 
                 var data = {
                     'asset_id': element.data("asset"),
-                    'mediafile_id': element.data("mediafile"),
                     'url': url,
                 };
                 MediaMosaDialog.insert(data);
                 return false;
             })
         });
+
+        var MediafileIdQueryURI = '{% url "tinymce-json-mediafile-query" %}';
+
     </script>
+    <script src="{{ STATIC_URL }}tiny_mce/plugins/mediamosa/mediamosa-dialog.js"></script>
 {% endblock extrahead %}
 
 {% block content %}
@@ -43,7 +47,7 @@
             <tbody>
             {% for asset in object_list %}
                 <tr>
-                    <td><input type="button" value="Selecteer" data-asset="{{ asset.id }}" data-mediafile="{{ asset.get_mediafile.id }}"></td>
+                    <td><input type="button" value="Selecteer" data-asset="{{ asset.id }}"></td>
                     <td><img src="{{ asset.vpx_still_url }}" alt="still" width="60"></td>
                     <td>{{ asset.dublin_core.title }}</td>
                     <td>{{ asset.dublin_core.creator }}</td>
