Fixed cancel button not showing any text.

--- a/mediamosa_tinymce/templates/mediamosa_tinymce/tinymce_asset_dialog.html
+++ b/mediamosa_tinymce/templates/mediamosa_tinymce/tinymce_asset_dialog.html
@@ -77,12 +77,8 @@
 
         <div class="mceActionPanel formControls">
             <span class="actionButtons">
-                <input type="button"
-                       id="cancel"
-                       class="standalone"
-                       name="cancel"
-                       i18n:attributes="value common_cancel"
-                       onclick="tinyMCEPopup.close();" />
+                <input type="button" id="cancel" name="cancel" value="{#cancel}" onclick="tinyMCEPopup.close();" />
+
             </span>
         </div>
 
