--- a/mediamosa_tinymce/templates/mediamosa_tinymce/tinymce_asset_dialog.html
+++ b/mediamosa_tinymce/templates/mediamosa_tinymce/tinymce_asset_dialog.html
@@ -1,76 +1,83 @@
-{% extends "admin/base_site.html" %}
 {% load i18n %}
 {% load url from future %}
 
-
-{% block branding %}
-<h1 id="site-name">{% trans 'MediaMosa' %}</h1>
-{% endblock %}
-
-{% block extrahead %}
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml" i18n:domain="tinymce">
+<head>
     <script src="{{ STATIC_URL }}js/jquery-1.8.3.min.js"></script>
+
     <script type="text/javascript" src="{{ STATIC_URL }}tiny_mce/tiny_mce_popup.js"></script>
+
     <script type="text/javascript">
-        $(document).ready(function() {
-            $(':button').click(function(event) {
-                var element = $(event.target);
+    $(document).ready(function() {
+        $(':button').click(function(event) {
+            var element = $(event.target);
 
-                var url = element.parents('tr').find('img').prop('src');
+            var url = element.parents('tr').find('img').prop('src');
 
-                var data = {
-                    'asset_id': element.data("asset"),
-                    'url': url,
-                };
-                MediaMosaDialog.insert(data);
-                return false;
-            })
-        });
+            var data = {
+                'asset_id': element.data("asset"),
+                'url': url,
+            };
+            MediaMosaDialog.insert(data);
+            return false;
+        })
+    });
 
-        var MediafileIdQueryURI = '{% url "tinymce-json-mediafile-query" %}';
+    var MediafileIdQueryURI = '{% url "tinymce-json-mediafile-query" %}';
 
     </script>
     <script src="{{ STATIC_URL }}tiny_mce/plugins/mediamosa/mediamosa-dialog.js"></script>
-{% endblock extrahead %}
+</head>
+<body onresize="MediaMosaDialog.resize();">
+    <div class="dialog-wrapper">
 
-{% block content %}
-<div class="content-main">
-    <form>
-        <table>
-            <thead>
-                <tr>
-                    <th></th>
-                    <th>Still</th>
-                    <th>Asset</th>
-                    <th>Aangemaakt door</th>
-                </tr>
-            </thead>
-            <tbody>
-            {% for asset in object_list %}
-                <tr>
-                    <td><input type="button" value="Selecteer" data-asset="{{ asset.id }}"></td>
-                    <td><img src="{{ asset.vpx_still_url }}" alt="still" width="60"></td>
-                    <td>{{ asset.dublin_core.title }}</td>
-                    <td>{{ asset.dublin_core.creator }}</td>
-                </tr>
-            {% endfor %}
-            </tbody>
-        </table>
+      <div style="background: url({{ STATIC_URL }}tiny_mce/plugins/mediamosa/img/mediamosa.png) no-repeat left center; padding-left: 30px; margin-bottom: 8px;">
+
+          <strong>Mediamosa Asset Browser</strong>
+      </div>
+
+      <div class="content-main" style="background-color: #fff; padding: 5px; border: 1px solid #ddd">
+            <form>
+                <table cellspacing="5">
+                    <thead>
+                        <tr>
+                            <th></th>
+                            <th>{% trans "MMStillTitle" %}</th>
+                            <th>{% trans "MMAssetTitle" %}</th>
+                            <th>{% trans "MMOwner" %}</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        {% for asset in object_list %}
+                        <tr>
+                            <td><input type="button" value="{% trans "MMSelectAsset" %}" data-asset="{{ asset.id }}" style="cursor: pointer;"></td>
+                            <td><img src="{{ asset.vpx_still_url }}" alt="still" width="60"></td>
+                            <td>{{ asset.dublin_core.title }}</td>
+                            <td>{{ asset.dublin_core.creator }}</td>
+                        </tr>
+                        {% endfor %}
+                    </tbody>
+                </table>
 
 
-        <div class="pagination">
-            <span class="step-links">
-                {% if page_obj.has_previous %}
-                    <a href="?page={{ page_obj.previous_page_number }}">previous</a>
-                {% endif %}
+                <div class="pagination">
+                    <span class="step-links">
+                        {% if page_obj.has_previous %}
+                        <a href="?page={{ page_obj.previous_page_number }}">{% trans "MMPrevious" %}</a>
+                        {% endif %}
 
-                <span class="current">
-                    Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}.
-                </span>
+                        <span class="current">
+                            {% trans "MMPage" %} {{ page_obj.number }} {% trans "MMof" %} {{ page_obj.paginator.num_pages }}
+                        </span>
 
-                {% if page_obj.has_next %}
-                    <a href="?page={{ page_obj.next_page_number }}">next</a>
-                {% endif %}
-            </span>
+                        {% if page_obj.has_next %}
+                        <a href="?page={{ page_obj.next_page_number }}">{% trans "MMNext" %}</a>
+                        {% endif %}
+                    </span>
+                </div>
+
+            </form>
         </div>
 
         <div class="visualClear"></div>
@@ -82,7 +89,6 @@
             </span>
         </div>
 
-    </form>
-</div>
-
-{% endblock content %}
+    </div>
+</body>
+</html>
