Added tabs to mediamosa selector and only show public and personal assets.

--- a/mediamosa_tinymce/templates/mediamosa_tinymce/tinymce_asset_dialog.html
+++ b/mediamosa_tinymce/templates/mediamosa_tinymce/tinymce_asset_dialog.html
@@ -7,7 +7,7 @@
     <script src="{{ STATIC_URL }}js/jquery-1.8.3.min.js"></script>
 
     <script type="text/javascript" src="{{ STATIC_URL }}tiny_mce/tiny_mce_popup.js"></script>
-
+    <script type="text/javascript" src="{{ STATIC_URL }}js/jquery.idTabs.min.js"></script>
     <script type="text/javascript">
     $(document).ready(function() {
         $(':button').click(function(event) {
@@ -28,6 +28,29 @@
 
     </script>
     <script src="{{ STATIC_URL }}tiny_mce/plugins/mediamosa/mediamosa-dialog.js"></script>
+    <style type="text/css">
+      #public-assets, #my-assets {
+        clear: both;
+      }
+      .idTabs li {
+        display:inline;
+        float:left;
+      }
+      a {
+      display:block;
+      width:60px;
+      background: #ddd;
+      width: 90px;
+      text-align: center;
+      padding: 5px;
+      margin-bottom: -1px;
+      border: 1px solid #ddd;
+      border-bottom: 0px;
+      }
+      .idTabs .selected {
+        background: #fff;
+      }
+    </style>
 </head>
 <body onresize="MediaMosaDialog.resize();">
     <div class="dialog-wrapper">
@@ -36,8 +59,12 @@
 
           <strong>Mediamosa Asset Browser</strong>
       </div>
-
-      <div class="content-main" style="background-color: #fff; padding: 5px; border: 1px solid #ddd">
+      <div class="clear" style="clear:both;"></div>
+      <ul class="idTabs">
+        <li><a href="#public-assets">{% trans "Public Assets" %}</a></li>
+        <li><a href="#my-assets">{% trans "My Assets" %}</a></li>
+      </ul>
+      <div id="public-assets" class="content-main" style="background-color: #fff; padding: 5px; border: 1px solid #ddd">
             <form>
                 <table cellspacing="5">
                     <thead>
@@ -49,7 +76,49 @@
                         </tr>
                     </thead>
                     <tbody>
-                        {% for asset in object_list %}
+                        {% for asset in public_list %}
+                        <tr>
+                            <td><input type="button" value="{% trans "MMSelectAsset" %}" data-asset="{{ asset.id }}" style="cursor: pointer;" /></td>
+                            <td><img src="{{ asset.vpx_still_url }}" alt="still" width="60"></td>
+                            <td>{{ asset.dublin_core.title }}</td>
+                            <td>{{ asset.dublin_core.creator }}</td>
+                        </tr>
+                        {% endfor %}
+                    </tbody>
+                </table>
+
+
+                <div class="pagination">
+                    <span class="step-links">
+                        {% if page_obj.has_previous %}
+                        <a href="?page={{ page_obj.previous_page_number }}">{% trans "MMPrevious" %}</a>
+                        {% endif %}
+
+                        <span class="current">
+                            {% trans "MMPage" %} {{ page_obj.number }} {% trans "MMof" %} {{ page_obj.paginator.num_pages }}
+                        </span>
+
+                        {% if page_obj.has_next %}
+                        <a href="?page={{ page_obj.next_page_number }}">{% trans "MMNext" %}</a>
+                        {% endif %}
+                    </span>
+                </div>
+
+            </form>
+        </div>
+        <div id="my-assets" class="content-main" style="background-color: #fff; padding: 5px; border: 1px solid #ddd">
+            <form>
+                <table cellspacing="5">
+                    <thead>
+                        <tr>
+                            <th></th>
+                            <th>{% trans "MMStillTitle" %}</th>
+                            <th>{% trans "MMAssetTitle" %}</th>
+                            <th>{% trans "MMOwner" %}</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        {% for asset in private_list %}
                         <tr>
                             <td><input type="button" value="{% trans "MMSelectAsset" %}" data-asset="{{ asset.id }}" style="cursor: pointer;" /></td>
                             <td><img src="{{ asset.vpx_still_url }}" alt="still" width="60"></td>
