fix for django 1.5

--- a/mediamosa_tinymce/templates/admin/mediamosa_tinymce_change_form.html
+++ b/mediamosa_tinymce/templates/admin/mediamosa_tinymce_change_form.html
@@ -2,7 +2,7 @@
 
 {% block extrahead %}
     <script type="text/javascript">
-        var mediamosaAssetDialogURI = "{% url tinymce-mmasset-select-dialog %}";
+        var mediamosaAssetDialogURI = "{% url "tinymce-mmasset-select-dialog" %}";
     </script>
     {{ block.super }}
 {% endblock %}
