--- a/mediamosa_tinymce/templates/mediamosa_tinymce/tinymce_asset_dialog.html
+++ b/mediamosa_tinymce/templates/mediamosa_tinymce/tinymce_asset_dialog.html
@@ -1,13 +1,18 @@
 {% load i18n %}
-{% load url from future %}
+{% load staticfiles %}
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" i18n:domain="tinymce">
 <head>
-    <script src="{{ STATIC_URL }}js/jquery-1.8.3.min.js"></script>
 
-    <script type="text/javascript" src="{{ STATIC_URL }}tiny_mce/tiny_mce_popup.js"></script>
-    <script type="text/javascript" src="{{ STATIC_URL }}js/jquery.idTabs.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+    <script
+        src="https://code.jquery.com/jquery-1.12.4.min.js"
+        integrity="sha256-ZosEbRLbNQzLpnKIkEdrPv7lOy9C27hHQ+Xp8a4MxAQ="
+        crossorigin="anonymous"></script>
+
+    <script type="text/javascript" src="{% static "tiny_mce/tiny_mce_popup.js" %}"></script>
+    <script type="text/javascript" src="{% static "js/jquery.idTabs.min.js" %}"></script>
     <script type="text/javascript">
     $(document).ready(function() {
         $(':button').click(function(event) {
@@ -27,7 +32,7 @@
     var MediafileIdQueryURI = '{% url "tinymce-json-mediafile-query" %}';
 
     </script>
-    <script src="{{ STATIC_URL }}tiny_mce/plugins/mediamosa/mediamosa-dialog.js"></script>
+    <script src="{% static "tiny_mce/plugins/mediamosa/mediamosa-dialog.js" %}"></script>
     <style type="text/css">
       #public-assets, #my-assets {
         clear: both;
@@ -55,7 +60,7 @@
 <body onresize="MediaMosaDialog.resize();">
     <div class="dialog-wrapper">
 
-      <div style="background: url({{ STATIC_URL }}tiny_mce/plugins/mediamosa/img/mediamosa.png) no-repeat left center; padding-left: 30px; margin-bottom: 8px;">
+      <div style="background: url({% static 'tiny_mce/plugins/mediamosa/img/mediamosa.png' %}) no-repeat left center; padding-left: 30px; margin-bottom: 8px;">
 
           <strong>Mediamosa Asset Browser</strong>
       </div>
